Second Commit HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="index.css">
     <title>Built a tribute page </title>
   </head>
   <body class="body">
@@ -80,6 +81,7 @@ Photography and travelling become his hobby, we can see some of his photograph a
     </tbody>
 </table>
     </p>
+    <script type="text/javascript" src="index.js"></script>
   </body>
   source : <a href="https://en.wikipedia.org/wiki/Nicholas_Saputra" >Wikipedia</a>
 </html>
